--- a/Maintenance dashboard/DashbordView/EmployeeControl/EmployeeControl.xaml
+++ b/Maintenance dashboard/DashbordView/EmployeeControl/EmployeeControl.xaml
@@ -51,7 +51,7 @@
 
                     <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
                        
-                        <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                        <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Text="{Binding Id, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
                         <TextBox x:Name="txtFirstName" Width="400" materialDesign:HintAssist.Hint="Imie" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
                         <TextBox x:Name="txtLastName" Width="400" materialDesign:HintAssist.Hint="Nazwisko" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
                         <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" materialDesign:HintAssist.HelperText="" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
