--- a/Maintenance dashboard/DashbordView/RegisterToolControl/RegisterToolControl.xaml
+++ b/Maintenance dashboard/DashbordView/RegisterToolControl/RegisterToolControl.xaml
@@ -16,7 +16,7 @@
     </UserControl.DataContext>
 
 
-    <Grid Margin="25" >
+    <Grid Margin="25">
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
         <Grid>
             <Border Height="auto" Width="auto" CornerRadius="20">
@@ -53,7 +53,7 @@
                 <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
                     <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
-                    <TextBox x:Name="txtRegisterToolName" Width="400" materialDesign:HintAssist.Hint="Nazwa wyposażenia" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Text="{Binding RegisterToolName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                    <TextBox x:Name="txtRegisterToolName" Width="400" materialDesign:HintAssist.Hint="Nazwa wyposażenia" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Text="{Binding RegisterTool, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
                     <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" materialDesign:HintAssist.HelperText="" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
 
                 </StackPanel>
