--- a/Maintenance dashboard/MainWindow.xaml
+++ b/Maintenance dashboard/MainWindow.xaml
@@ -19,9 +19,13 @@
             <Grid Background="#FF0069C0" Height="10"/>
             <Grid Margin="5">
 
-                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,0,10,0" Grid.Column="1">
+                <StackPanel HorizontalAlignment="Right"
+                            Orientation="Horizontal" Margin="0,0,10,0" 
+                            Grid.Column="1">
 
-                    <Button x:Name="btnHome" Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray" Click="btnHomeWindow_Click">
+                    <Button x:Name="btnHome" Width="30" Height="30" 
+                            Background="{x:Null}" BorderBrush="{x:Null}"
+                            Padding="0" Foreground="Gray" Click="btnHomeWindow_Click">
                         <materialDesign:PackIcon Kind="Home" />
                     </Button>
 
@@ -31,7 +35,9 @@
                                 <materialDesign:PackIcon Kind="Information" Foreground="Gray"/>
                             </materialDesign:PopupBox.ToggleContent>
                             <StackPanel Width="300" Margin="8">
-                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="INFORMACJE"/>
+                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}"
+                                           HorizontalAlignment="Center" Margin="8" Foreground="Gray" 
+                                           Text="INFORMACJE"/>
                             </StackPanel>
                         </materialDesign:PopupBox>
                     </StackPanel>
@@ -42,7 +48,8 @@
                                 <materialDesign:PackIcon Kind="BellOutline" Foreground="Gray"/>
                             </materialDesign:PopupBox.ToggleContent>
                             <StackPanel Width="300" Margin="8">
-                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="ALARMY"/>
+                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" 
+                                           HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="ALARMY"/>
                             </StackPanel>
                         </materialDesign:PopupBox>
                     </StackPanel>
@@ -53,7 +60,8 @@
                                 <materialDesign:PackIcon Kind="Settings" Foreground="Gray"/>
                             </materialDesign:PopupBox.ToggleContent>
                             <StackPanel Width="300" Margin="8">
-                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="OPCJE"/>
+                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" 
+                                           HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="OPCJE"/>
                             </StackPanel>
                         </materialDesign:PopupBox>
                     </StackPanel>
@@ -64,15 +72,22 @@
                                 <materialDesign:PackIcon Kind="Login" Foreground="Gray"/>
                             </materialDesign:PopupBox.ToggleContent>
                             <StackPanel Width="300" Margin="8">
-                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="LOGOWANIE"/>
-                                <PasswordBox x:Name="PasswordBox" Margin="8" materialDesign:HintAssist.Hint="Hasło" materialDesign:TextFieldAssist.HasClearButton="True" materialDesign:HintAssist.HelperText="Wpisz hasło"  />
-                                <Button x:Name="btnSavePassword" Click="btnSavePassword_Click" Style="{StaticResource MaterialDesignFlatButton}" Margin="8"  ToolTip="MaterialDesignFlatButton" Content="AKCEPTUJ"/>
+                                <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}" 
+                                           HorizontalAlignment="Center" Margin="8" Foreground="Gray" Text="LOGOWANIE"/>
+                                <PasswordBox x:Name="PasswordBox" Margin="8" materialDesign:HintAssist.Hint="Hasło"
+                                             materialDesign:TextFieldAssist.HasClearButton="True" 
+                                             materialDesign:HintAssist.HelperText="Wpisz hasło"  />
+                                <Button x:Name="btnSavePassword" Click="btnSavePassword_Click" 
+                                        Style="{StaticResource MaterialDesignFlatButton}" Margin="8"  
+                                        ToolTip="MaterialDesignFlatButton" Content="AKCEPTUJ"/>
                             </StackPanel>
                         </materialDesign:PopupBox>
                     </StackPanel>
 
                     
-                    <Button x:Name="btnCloseWindow" Width="30" Height="30" Background="{x:Null}" BorderBrush="{x:Null}" Padding="0" Foreground="Gray" Click="btnCloseWindow_Click" >
+                    <Button x:Name="btnCloseWindow" Width="30" Height="30" 
+                            Background="{x:Null}" BorderBrush="{x:Null}" 
+                            Padding="0" Foreground="Gray" Click="btnCloseWindow_Click" >
                         <materialDesign:PackIcon Kind="Power"/>
                     </Button>
                     
@@ -82,7 +97,8 @@
         </StackPanel>
 
         <Grid Margin="330 20 10 10">
-            <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" 
+                  VerticalAlignment="Center">
 
                 <Image Source="Resources/Zenek.png"/>
             </Grid>
@@ -91,39 +107,75 @@
         <StackPanel Width="320" HorizontalAlignment="Left" Background="#ff222222" >
             <Image Source="Resources/MarelliLogo.jpg" Margin="10"/>
             <Grid HorizontalAlignment="Left" Background="#ff222222" VerticalAlignment="Bottom">
-                <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.3}">
-                    <Grid x:Name="GridCursor" Margin="0 10 0  0" Width="10" HorizontalAlignment="Left" Height="60" Background="#FF0069C0" VerticalAlignment="Top"/>
+                <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
+                                                     OpeningEffect="{materialDesign:TransitionEffect SlideInFromLeft, Duration=0:0:0.3}">
+                    <Grid x:Name="GridCursor" Margin="0 10 0  0" Width="10" 
+                          HorizontalAlignment="Left" Height="60" Background="#FF0069C0" 
+                          VerticalAlignment="Top"/>
                 </materialDesign:TransitioningContent>
 
-                <ListView x:Name="ListViewMenu" Margin="0 10" SelectionChanged="ListViewMenu_SelectionChanged">
+                <ListView x:Name="ListViewMenu" Margin="0 10" SelectionChanged="ListViewMenu_SelectionChanged" FontSize="14">
                     <ListViewItem Height="60" Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="UsersAddOutline" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
-                            <TextBlock Text="Baza uprawnionych pracowników" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                            <materialDesign:PackIcon Kind="UsersAddOutline" Width="30" Height="30"
+                                                     VerticalAlignment="Center" Margin="5"/>
+                            <TextBlock Text="Baza uprawnionych pracowników" 
+                                       VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
                     <ListViewItem Height="60" Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Tools" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
-                            <TextBlock Text="Baza rejestrowanego wyposażenia" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                            <materialDesign:PackIcon Kind="Tools" Width="30" Height="30" 
+                                                     VerticalAlignment="Center" Margin="5"/>
+                            <TextBlock Text="Baza rejestrowanego wyposażenia"  
+                                       VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
                     <ListViewItem Height="60" Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="ViewList" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
-                            <TextBlock Text="Rejestr pobrań wyposażenia" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                            <materialDesign:PackIcon Kind="ViewList" Width="30" Height="30"  
+                                                     VerticalAlignment="Center" Margin="5"/>
+                            <TextBlock Text="Rejestr pobrań wyposażenia" 
+                                       VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem Height="60" Foreground="LightGray">
+                    
+                    <ListViewItem x:Name="listaPaletek"  Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Toolbox" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
-                            <TextBlock Text="Baza termostatów" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                            <materialDesign:PackIcon Kind="Toolbox" Width="30" 
+                                                     Height="35" VerticalAlignment="Top" Margin="5"/>
+                            
+                            <TreeView  VerticalAlignment="Center" Margin="10 0" Background="Transparent">
+                                <TreeViewItem Header="Baza paletek" Foreground="White" IsEnabled="{Binding ElementName=listaPaletek, Path=IsFocused}" 
+                                              IsExpanded="{Binding ElementName=listaPaletek, Path=IsFocused}" >
+                                    <TreeViewItem Header="Wydanie paletki" Foreground="White" 
+                                                  materialDesign:TreeViewAssist.AdditionalTemplate="{x:Static materialDesign:TreeViewAssist.SuppressAdditionalTemplate}" />
+                                    <TreeViewItem Header="Przyjecie paletki" 
+                                                  Foreground="White" materialDesign:TreeViewAssist.AdditionalTemplate="{x:Static materialDesign:TreeViewAssist.SuppressAdditionalTemplate}" />
+                                    <TreeViewItem Header="Przeglądanie bazy" 
+                                                  Foreground="White" materialDesign:TreeViewAssist.AdditionalTemplate="{x:Static materialDesign:TreeViewAssist.SuppressAdditionalTemplate}" />
+                                </TreeViewItem>
+                            </TreeView>
+                            
                         </StackPanel>
                     </ListViewItem>
-                    <ListViewItem Height="60" Foreground="LightGray">
+                    <ListViewItem x:Name="listaTermostatow" Foreground="LightGray">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Kind="Toolbox" Width="30" Height="30" VerticalAlignment="Center" Margin="5"/>
-                            <TextBlock Text="Baza paletek" FontSize="13" VerticalAlignment="Center" Margin="20 0" FontFamily="Comic Sans MS"/>
+                            <materialDesign:PackIcon Kind="Toolbox" Width="30" 
+                                                     Height="35" VerticalAlignment="top" Margin="5"/>
+
+                            <TreeView VerticalAlignment="Center" Margin="10 0"  Background="Transparent">
+                                <TreeViewItem Header="Baza termostatów" Foreground="White" IsEnabled="{Binding ElementName=listaTermostatow, Path=IsFocused}" 
+                                              IsExpanded="{Binding ElementName=listaTermostatow, Path=IsFocused}" >
+                                    <TreeViewItem Header="Wydanie termostatu" Foreground="White" 
+                                                  materialDesign:TreeViewAssist.AdditionalTemplate="{x:Static materialDesign:TreeViewAssist.SuppressAdditionalTemplate}" />
+                                    <TreeViewItem Header="Przyjecie paletki" 
+                                                  Foreground="White" materialDesign:TreeViewAssist.AdditionalTemplate="{x:Static materialDesign:TreeViewAssist.SuppressAdditionalTemplate}" />
+                                    <TreeViewItem Header="Przeglądanie bazy" 
+                                                  Foreground="White" materialDesign:TreeViewAssist.AdditionalTemplate="{x:Static materialDesign:TreeViewAssist.SuppressAdditionalTemplate}" />
+                                </TreeViewItem>
+                            </TreeView>
+
                         </StackPanel>
                     </ListViewItem>
                 </ListView>
@@ -134,10 +186,13 @@
 
         </StackPanel>
         <Grid HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="15" Width="220" >
-            <materialDesign:Card UniformCornerRadius="14" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" >
-                <ProgressBar x:Name="progPlcConnectionStatus" Style="{StaticResource MaterialDesignCircularProgressBar}" Value="50" IsIndeterminate="False" Foreground="Red"/>
+            <materialDesign:Card UniformCornerRadius="14" Padding="4" HorizontalAlignment="Left" 
+                                 VerticalAlignment="Center" Margin="5" >
+                <ProgressBar x:Name="progPlcConnectionStatus" Style="{StaticResource MaterialDesignCircularProgressBar}" 
+                             Value="50" IsIndeterminate="False" Foreground="Red"/>
             </materialDesign:Card>
-            <Label x:Name="lblPlcConnectionStatus" Content="SIMATIC NOT CONNECTED"  HorizontalAlignment="Right" Margin="5" Foreground="Red"/>
+            <Label x:Name="lblPlcConnectionStatus" Content="SIMATIC NOT CONNECTED" 
+                   HorizontalAlignment="Right" Margin="5" Foreground="Red"/>
         </Grid>
     </Grid>
 </Window>
