--- a/Maintenance dashboard/Views/HomeControl/HomeControl.xaml
+++ b/Maintenance dashboard/Views/HomeControl/HomeControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Maintenance_dashboard.WindowControl.HomeControl"
+﻿<UserControl x:Class="MaintenanceDashboard.WindowControl.HomeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Maintenance_dashboard.WindowControl"
+             xmlns:local="clr-namespace:MaintenanceDashboard.WindowControl"
              mc:Ignorable="d" 
              Height="auto" Width="auto">
     <Grid>
