--- a/Maintenance dashboard/Views/PaddleControl/PaddleControl.xaml
+++ b/Maintenance dashboard/Views/PaddleControl/PaddleControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="Maintenance_dashboard.Views.PaddleControl.PaddleControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Views.PaddleControl.PaddleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Maintenance_dashboard.Views.PaddleControl"
+             xmlns:local="clr-namespace:MaintenanceDashboard.Views.PaddleControl"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              TextElement.FontWeight="Regular"
