--- a/Maintenance dashboard.Client/Views/HomeControl/HomeControl.xaml
+++ b/Maintenance dashboard.Client/Views/HomeControl/HomeControl.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="MaintenanceDashboard.WindowControl.HomeControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.HomeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard.WindowControl"
+             xmlns:local="clr-namespace:MaintenanceDashboard.Client"
              mc:Ignorable="d" 
              Height="auto" Width="auto">
     <Grid>
-        <Image Source="/Maintenance dashboard;component/Resources/Zenek.png"/>
+        <Image Source="/MaintenanceDashboard.Client;component/Resources/Zenek.png"/>
     </Grid>
 </UserControl>
