--- a/Maintenance dashboard.Client/Views/RegisterToolControl/RegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/RegisterToolControl/RegisterToolControl.xaml
@@ -3,18 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard.Views.RegisterToolControl" 
+             xmlns:local="clr-namespace:MaintenanceDashboard" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:Maintenance_dashboard="clr-namespace:MaintenanceDashboard" x:Class="MaintenanceDashboard.Views.RegisterToolControl.RegisterToolControl"
+             xmlns:Maintenance_dashboard="clr-namespace:MaintenanceDashboard.Client" x:Class="MaintenanceDashboard.Client.RegisterToolControl"
              mc:Ignorable="d" 
              Height="auto" Width="auto" Loaded="UserControl_Loaded">
     <UserControl.Resources>
         <CollectionViewSource x:Key="registerToolViewSource" d:DesignSource="{d:DesignInstance {x:Type Maintenance_dashboard:RegisterTool}, CreateList=True}"/>
     </UserControl.Resources>
 
-    <UserControl.DataContext>
-        <local:RegisterToolValidation/>
-    </UserControl.DataContext>
+    
 
 
     <Grid Margin="25">
