--- a/Maintenance dashboard.Client/Views/RegisterToolControl/RegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/RegisterToolControl/RegisterToolControl.xaml
@@ -2,21 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard" 
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:Maintenance_dashboard="clr-namespace:MaintenanceDashboard.Client" x:Class="MaintenanceDashboard.Client.RegisterToolControl"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             x:Class="MaintenanceDashboard.Client.RegisterToolControl"
              mc:Ignorable="d" 
-             Height="auto" Width="auto" Loaded="UserControl_Loaded">
-    <UserControl.Resources>
-        <CollectionViewSource x:Key="registerToolViewSource" d:DesignSource="{d:DesignInstance {x:Type Maintenance_dashboard:RegisterTool}, CreateList=True}"/>
-    </UserControl.Resources>
-
-    
-
+             xmlns:data="clr-namespace:MaintenanceDashboard.Data.Domain;assembly=MaintenanceDashboard.Data"
+             xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewlModel}"
+             Height="auto" Width="auto">
 
     <Grid Margin="25">
-        <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
+        <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
+                                             OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
         <Grid>
             <Border Height="auto" Width="auto" CornerRadius="20">
                 <Border.Background>
@@ -29,14 +26,17 @@
             </Border>
 
             
-            <materialDesign:PackIcon Kind="UserAddOutline" VerticalAlignment="Top" Width="80" Height="80" HorizontalAlignment="Center" Margin="5" Foreground="White"/>
-            <Rectangle Fill="White" Margin="15,80,15, 15" RadiusX="15" RadiusY="15" RenderTransformOrigin="0.5,0.5">
+            <materialDesign:PackIcon Kind="UserAddOutline" VerticalAlignment="Top" Width="80" Height="80" 
+                                     HorizontalAlignment="Center" Margin="5" Foreground="White"/>
+            <Rectangle Fill="White" Margin="15,80,15, 15" RadiusX="15" RadiusY="15" 
+                       RenderTransformOrigin="0.5,0.5">
                 <Rectangle.Effect>
-                    <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" ShadowDepth="1"/>
+                    <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
+                                      ShadowDepth="1"/>
                 </Rectangle.Effect>
             </Rectangle>
 
-            <Grid Width="auto" Height="auto" Margin="15,80,15, 15" DataContext="{StaticResource registerToolViewSource}">
+            <Grid Width="auto" Height="auto" Margin="15,80,15, 15" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -47,48 +47,52 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="REJESTROWANE WYPOSAŻENIE" HorizontalAlignment="Center" VerticalAlignment="Top"  FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="0,5,0,0"/>
+                <ListBox ItemsSource="{Binding RegisterTools}" DockPanel.Dock="Bottom" Grid.Column="1" Grid.Row="1" Margin="10">
+                    <ListBox.Resources>
+                        <DataTemplate DataType="{x:Type data:RegisterTool}">
+                            <TextBlock>
+                        <Run FontWeight="Bold">Tool Name:</Run>
+                        <Run Text="{Binding ToolName}"/>
+                        <Run FontWeight="Bold">UidCode:</Run>
+                        <Run Text="{Binding UidCode}"/>
+
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListBox.Resources>
+                </ListBox>
+
+                <TextBlock Text="REJESTROWANE WYPOSAŻENIE" HorizontalAlignment="Center" VerticalAlignment="Top"  
+                           FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="0,5,0,0"/>
 
                 <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
-                    <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
-                    <TextBox x:Name="txtRegisterToolName" Width="400" materialDesign:HintAssist.Hint="Nazwa wyposażenia" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Text="{Binding RegisterTool, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" materialDesign:HintAssist.HelperText="" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
+                    <TextBox x:Name="txtID" Width="400" IsReadOnly="True" materialDesign:HintAssist.Hint="Id" 
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
+                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Nazwa wyposażenia" 
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
+                             Text="{Binding ToolName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                    <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" 
+                              materialDesign:HintAssist.HelperText="" IsReadOnly="True" 
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
+                              Text="{Binding UidCode, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
                 </StackPanel>
 
-                <DataGrid x:Name="registerToolDataGrid" AutoGenerateColumns="False" Margin="10" EnableRowVirtualization="True" ItemsSource="{Binding}"  Grid.Row="1" Grid.Column="1" RowDetailsVisibilityMode="VisibleWhenSelected">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
-                        <DataGridTextColumn x:Name="toolNameColumn" Binding="{Binding ToolName}" Header="Tool Name" Width="SizeToHeader"/>
-                        <DataGridTextColumn x:Name="uidCodeColumn" Binding="{Binding UidCode}" Header="Uid Code" Width="SizeToHeader"/>
-                    </DataGrid.Columns>
-                </DataGrid>
 
-                <Grid Grid.Column="0" Grid.Row="2" VerticalAlignment="Top" DataContext="{StaticResource registerToolViewSource}">
+                <Grid Grid.Column="0" Grid.Row="2" VerticalAlignment="Top">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Button  x:Name="btnAddRegisterTool" Height="25"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1" Click="btnAddRegisterTool_Click">
-                        <Button.Style>
-                            <Style TargetType="{x:Type Button}">
-                                <Setter Property="IsEnabled" Value="false" />
-                                <Style.Triggers>
-                                    <MultiDataTrigger>
-                                        <MultiDataTrigger.Conditions>
-                                            <Condition Binding="{Binding (Validation.HasError), ElementName=txtRegisterToolName}" Value="false" />
+                    <Button  x:Name="btnAddRegisterTool" Height="25"  Background="#FF0069C0"  
+                             BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
+                             Command="{Binding AddRegisterToolCommand}"/>
 
-                                        </MultiDataTrigger.Conditions>
-                                        <Setter Property="IsEnabled" Value="true" />
-                                    </MultiDataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </Button.Style>
-                    </Button>
-                    <Button  x:Name="btnEditEmployee" Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  Content="EDYTUJ"  Margin="10" Grid.Column="0" Visibility="Hidden"/>
-                    <Button  x:Name="btnDeleteEmployee" Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  Content="USUŃ"  Margin="10" Grid.Column="2" Visibility="Hidden"/>
+                    <Button  Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
+                             Content="EDYTUJ"  Margin="10" Grid.Column="0" Visibility="Hidden"/>
+                    <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
+                              Content="USUŃ"  Margin="10" Grid.Column="2" Visibility="Hidden"/>
                 
                 </Grid>
             </Grid>
