--- a/Maintenance dashboard.Client/Views/HomeControl.xaml
+++ b/Maintenance dashboard.Client/Views/HomeControl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.AddPadleControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.HomeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard.Client"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             Height="auto" Width="auto">
     <Grid>
+        <Image Source="/MaintenanceDashboard.Client;component/Resources/Zenek.png"/>
     </Grid>
 </UserControl>
