--- a/Maintenance dashboard.Client/Views/PaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/PaddleControl.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.PaddleControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.PaddleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard.Client"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
              TextElement.FontWeight="Regular"
