--- a/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/RegisterToolControl.xaml
@@ -14,7 +14,7 @@
     <Grid Margin="25">
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
                                              OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
-        <Grid>
+        <Grid x:Name="GridPrincipal">
             <Border Height="auto" Width="auto" CornerRadius="20">
                 <Border.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -25,10 +25,15 @@
                 </Border.Background>
             </Border>
 
-            
-            <materialDesign:PackIcon Kind="UserAddOutline" VerticalAlignment="Top" Width="80" Height="80" 
+            <Button x:Name="btnOpenWindowAddRegisterTool"  Height="25"  Width="150" Background="White" Foreground="#FF0069C0"  BorderBrush="#FF0069C0"  
+                             Content="DODAJ WYPOSAŻENIE" Grid.Column="0" FontSize="11" VerticalAlignment="Top"
+                         HorizontalAlignment="Left" Margin="20" Click="btnOpenWindowAddRegisterTool_Click" />
+
+
+            <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Top" Width="80" Height="80" 
                                      HorizontalAlignment="Center" Margin="5" Foreground="White"/>
-            <Rectangle Fill="White" Margin="15,80,15, 15" RadiusX="15" RadiusY="15" 
+            
+            <Rectangle Fill="White" Margin="15,85,15, 15" RadiusX="15" RadiusY="15" 
                        RenderTransformOrigin="0.5,0.5">
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="10" RenderingBias="Quality" Direction="0" Color="#FFBBBBBB" 
@@ -36,16 +41,18 @@
                 </Rectangle.Effect>
             </Rectangle>
 
-            <Grid Width="auto" Height="auto" Margin="15,80,15, 15" >
+            <Grid  Margin="15,80,15, 15" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="35"/>
+                    <RowDefinition Height="60"/>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
+
+                
 
                 <ListBox ItemsSource="{Binding RegisterTools}" DockPanel.Dock="Bottom" Grid.Column="1" Grid.Row="1" Margin="10">
                     <ListBox.Resources>
@@ -61,8 +68,8 @@
                     </ListBox.Resources>
                 </ListBox>
 
-                <TextBlock Text="REJESTROWANE WYPOSAŻENIE" HorizontalAlignment="Center" VerticalAlignment="Top"  
-                           FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="0,5,0,0"/>
+                <TextBlock Text="REJESTROWANE WYPOSAŻENIE" HorizontalAlignment="Center" VerticalAlignment="Center"  
+                           FontSize="18" Grid.Column="0" Grid.Row="0" Foreground="Gray" Grid.ColumnSpan="2" Margin="10"/>
 
                 <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
@@ -83,16 +90,13 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
-                        <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Button  x:Name="btnAddRegisterTool" Height="25"  Background="#FF0069C0"  
-                             BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding AddRegisterToolCommand}"/>
+                    
 
                     <Button  Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
-                             Content="EDYTUJ"  Margin="10" Grid.Column="0" Visibility="Hidden"/>
+                             Content="EDYTUJ"  Margin="10" Grid.Column="0" />
                     <Button   Height="25"  Width="100"  Background="#FF0069C0"  BorderBrush="#FF0069C0"  
-                              Content="USUŃ"  Margin="10" Grid.Column="2" Visibility="Hidden"/>
+                              Content="USUŃ"  Margin="10" Grid.Column="2"/>
                 
                 </Grid>
             </Grid>
